ALPHA 0.0.6 - April 22, 2025
- Home screen looks more like scenexe now

ALPHA 0.0.5 - April 21, 2025
- Added some animation when changing gamemode
- Fixed the background grid
- Improved the home screen canvas render

ALPHA 0.0.4 - April 19, 2025
- Made changes to the home screen
- You can now press m to toggle debug

ALPHA 0.0.3 - April 18, 2025
- Added player healing (6 sec delay, 8 sec full healing)
- Changed the debug to mimic rocketer
- Added a minimap
- Bullets can now pass through objects (added penetration)
- Nerfed basic's damage
- Added all shapes up until tetradecagon
- Added spawning chances for different shapes
- Fixed drawing sequence (shapes now drawn at the bottom, particles rendered last)
- Fixed rotation speed

ALPHA 0.0.2 - April 15, 2025
- Added a death screen and respawning
- Added a simple home screen

ALPHA 0.0.1 - April 14, 2025
- Moved the game to this website
- This game is a rewritten version of the old singleplayer rocketer
- Fixed the map borders and health bars